@@ -1,5 +1,13 @@
 == Version 2.5.16 Work in progress (not released -- this is a draft) ==
 
+    Non breaking changes :
+    ----------------------
+        # Javascript:
+            * Dialog:
+                - Add option 'propagateEvent':.
+                    - When enabled, a copy of the event prefixed by 'dialog-' is triggered to allow the usage of external handlers (the dialog element if opened or the window.document).
+                      e.g: $(document).on('dialog-open', function() { ... });
+
 
 == Version 2.5.14 & 2.5.15 ==
 
